--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "workspace",
   "version": "0.0.0",
+  "engines": {
+    "npm": ">=9.3.1",
+    "node": ">=20.12.1",
+    "chrome": "107.0.5304.110"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 4500",
