--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "npm-run-all": "^4.1.5",
     "ts-node": "10.4.0",
     "tslint": "~6.1.0",
-    "typescript": "~5.1.6",
+    "typescript": "4.9.3",
     "wait-on": "^6.0.0"
   }
 }
