--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@ngx-translate/core": "^14.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^2.2.0",
-    "zone.js": "~0.13.3"
+    "zone.js": "0.14.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.16",
